crates/stef-parser/tests/snapshots/parser__print@types-ref.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/types-ref.stef
---
struct Sample {
    basic: Test123 @1,
    with_generics: KeyValue<u32, bool> @2,
}


