crates/stef-parser/tests/snapshots/parser__print@types_ref.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "struct Sample {\n    basic: Test123 @1,\n    with_generics: KeyValue<u32, bool> @2,\n}\n\nenum Test123 {\n    Value @1,\n}\n\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/stef-parser/tests/inputs/types_ref.stef
---
struct Sample {
    basic: Test123 @1,
    with_generics: KeyValue<u32, bool> @2,
}

enum Test123 {
    Value @1,
}

struct KeyValue<K, V> {
    key: K @1,
    value: V @2,
}


